ETA Processor components

--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -1,7 +1,20 @@
 {
-	"packageDirectories": [],
-	"name": "dx-empty",
-	"namespace": "rHDevOps",
-	"sfdcLoginUrl": "https://login.salesforce.com",
-	"sourceApiVersion": "55.0"
+  "packageDirectories": [
+    {
+      "path": "force-app",
+      "default": true,
+      "package": "ISV DevOps",
+      "versionName": "ver 0.1",
+      "versionNumber": "0.1.0.NEXT",
+      "versionDescription": ""
+    }
+  ],
+  "name": "dx-empty",
+  "namespace": "rHDevOps",
+  "sfdcLoginUrl": "https://login.salesforce.com",
+  "sourceApiVersion": "55.0",
+  "packageAliases": {
+    "ISV DevOps": "0HoVT00000000Pp0AI",
+    "ISV DevOps@0.1.0-1": "04tVT0000001MT7YAM"
+  }
 }
