--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -15,6 +15,7 @@
   "sourceApiVersion": "55.0",
   "packageAliases": {
     "ISV DevOps": "0HoVT00000000Pp0AI",
-    "ISV DevOps@0.1.0-1": "04tVT0000001MT7YAM"
+    "ISV DevOps@0.1.0-1": "04tVT0000001MT7YAM",
+    "ISV DevOps@1.1000.0": "04tVT0000001MXxYAM"
   }
 }
