Add namespace field

--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -1,22 +1,23 @@
 {
-	"packageDirectories": [
-		{
-			"path": "force-app",
-			"default": true,
-			"package": "ISV DevOps",
-			"versionName": "ver 0.1",
-			"versionNumber": "0.1.0.NEXT",
-			"versionDescription": "",
-			"ancestorVersion": "HIGHEST"
-		}
-	],
-	"name": "dx-empty",
-	"namespace": "rHDevOps",
-	"sfdcLoginUrl": "https://login.salesforce.com",
-	"sourceApiVersion": "55.0",
-	"packageAliases": {
-		"ISV DevOps": "0HoVT00000000Pp0AI",
-		"ISV DevOps@0.1.0-1": "04tVT0000001MT7YAM",
-		"ISV DevOps@1.1000.0": "04tVT0000001MXxYAM"
-	}
+  "packageDirectories": [
+    {
+      "path": "force-app",
+      "default": true,
+      "package": "ISV DevOps",
+      "versionName": "ver 0.1",
+      "versionNumber": "0.1.0.NEXT",
+      "versionDescription": "",
+      "ancestorVersion": "HIGHEST"
+    }
+  ],
+  "name": "dx-empty",
+  "namespace": "rHDevOps",
+  "sfdcLoginUrl": "https://login.salesforce.com",
+  "sourceApiVersion": "55.0",
+  "packageAliases": {
+    "ISV DevOps": "0HoVT00000000Pp0AI",
+    "ISV DevOps@0.1.0-1": "04tVT0000001MT7YAM",
+    "ISV DevOps@1.1000.0": "04tVT0000001MXxYAM",
+    "ISV DevOps@1.1001.0": "04tVT0000001McnYAE"
+  }
 }
