--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -18,6 +18,7 @@
     "ISV DevOps": "0HoVT00000000Pp0AI",
     "ISV DevOps@0.1.0-1": "04tVT0000001MT7YAM",
     "ISV DevOps@1.1000.0": "04tVT0000001MXxYAM",
-    "ISV DevOps@1.1001.0": "04tVT0000001McnYAE"
+    "ISV DevOps@1.1001.0": "04tVT0000001McnYAE",
+    "ISV DevOps@1.1002.0": "04tVT0000001MhdYAE"
   }
 }
